k8s/overlay/aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    # uncomment the nex line only if the issuer ready
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - dev.jym272.foundation
        - test.jym272.foundation
      #  The secretName must be different for every Ingress you create.
      secretName: jym272-foundation-tls
  rules:
    - host: "dev.jym272.foundation"
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 3050
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tickets-api
                port:
                  number: 3051
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-api
                port:
                  number: 3052
          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payments-api
                port:
                  number: 3054
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
    - host: "test.jym272.foundation"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hello-kubernetes-second
                port:
                  number: 80
