k8s/overlay/aws/ingress_alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:sa-east-1:712136406596:certificate/48e0d336-1cb2-4d4a-a4d4-7a9bf30a7859
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb # or whatever ingress class name of ELB
  tls:
    - hosts:
        - dev.jym272.foundation # change it to your host name here
  rules:
    - host: dev.jym272.foundation
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /api/users/
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  name: auth
          - path: /api/tickets/
            pathType: Prefix
            backend:
              service:
                name: tickets-api
                port:
                  name: tickets
          - path: /api/orders/
            pathType: Prefix
            backend:
              service:
                name: orders-api
                port:
                  name: orders
          - path: /api/payments/
            pathType: Prefix
            backend:
              service:
                name: payments-api
                port:
                  name: payments
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: frontend


# kubectl logs -n kube-system $(kubectl get po -n kube-system | egrep -o 'aws-load-balancer-controller[a-zA-Z0-9-]+')
